--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "expo": "^26.0.0",
     "prettier-eslint": "^8.8.1",
     "react": "16.3.0-alpha.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-navigation": "^1.5.11"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^16.1.0",
