--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prettier-eslint": "^8.8.1",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
-    "react-navigation": "^1.5.11"
+    "react-navigation": "^1.5.11",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^16.1.0",
