react-redux connect

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
       "no-use-before-define": 0,
       "semi": [2, "never"],
       "jsx-quotes": ["error", "prefer-single"],
-      "arrow-parens": [2, "as-needed"]
+      "arrow-parens": [2, "as-needed"],
+      "react/prop-types": [0],
+      "react/require-default-props": [0]
     }
 }
