--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
     "expo": "^26.0.0",
+    "firebase": "^4.12.1",
     "prettier-eslint": "^8.8.1",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
