--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "redux-form": "^7.3.0"
+    "redux-form": "^7.3.0",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^16.1.0",
